Add a quit button to the IRC sample

--- a/samples/android/irc/res/layout/host.xml
+++ b/samples/android/irc/res/layout/host.xml
@@ -57,4 +57,11 @@
         android:layout_height="wrap_content"
         android:text="Stop Channel"
     />
+    
+    <Button
+        android:id="@+id/hostQuit"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:text="Quit Application"
+    />
 </LinearLayout>
