--- a/alljoyn_android/alljoyn/res/layout/main.xml
+++ b/alljoyn_android/alljoyn/res/layout/main.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/tabhost"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+   
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:padding="5dp">
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp">
+        
+        <Button
+            android:id="@+id/mainExit"        
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+    	    android:text="Exit"
+        />
     </LinearLayout>
-</TabHost>
+</LinearLayout>
+
