--- a/samples/android/chat/res/layout/main.xml
+++ b/samples/android/chat/res/layout/main.xml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/tabhost"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-	<ListView android:id="@+id/ListView" 
-		android:layout_width="fill_parent" 
-		android:layout_height="fill_parent"
-		android:stackFromBottom="true"
-		android:transcriptMode="alwaysScroll"
-		android:layout_weight="1.0" 
-		/>
-	<LinearLayout 
-		android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		>
-		<EditText android:id="@+id/EditText"
-			android:layout_height="wrap_content" 
-			android:layout_width="wrap_content"
-			android:layout_weight="1.0"
-			android:layout_gravity="bottom" 
-			android:hint="@string/enter_message_hint" 
-			/>
-	</LinearLayout>
-</LinearLayout>
+    android:layout_height="fill_parent">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:padding="5dp">
+        <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp" 
+        />
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:padding="5dp"
+        />
+    </LinearLayout>
+</TabHost>
